--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,6 +30,8 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: run DB migrations
+      run: php artisan migrate --force 
     - name: run DB seeders
       run: php artisan db:seed --force
     - name: Execute tests (Unit and Feature tests) via PHPUnit
